--- a/index.html
+++ b/index.html
@@ -2,41 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro component with sign up form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="normalize.css" type="text/css" rel="stylesheet">
+  <link href="style.css" type="text/css" rel="stylesheet">
+  <title>Intro component with sign up form</title>
 </head>
 <body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <div class="wrapper">
+    <div class="txt-container">
+      <h1 class="title">Learn to code by watching others</h1>
+      <hr class="hr"></hr>
+      <p class="description">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+  but understanding how developers think is invaluable.</p>
+    </div>
+    <div class="form-container">
+      <button type="submit" class="btn-bg-purp btn">Try it free 7 days then $20/mo. thereafter</button>
+      <form action="results.html" method="get" class="form">
+        <fieldset class="fieldset">
+          <input type="text" name="first-name" class="input" placeholder="First Name" minlength="1" maxlength="20" required>
+          <div class="error hidden">First name error mssg</div>
+          <input type="text" name="last-name" class="input" placeholder="Last Name" minlength="1" maxlength="20" required>
+          <div class="error hidden">Last name error mssg</div>
+          <input type="email" name="email" class="input" placeholder="Email Address" required>
+          <div class="error hidden">Email error mssg</div>
+          <input type="password" name="password" class="input" placeholder="Password" minlength="6" required>
+          <div class="error hidden">Password error mssg</div>
+          <button type="submit" name="btn-submit" class="btn-bg-green btn">Claim your free trial</button>
+        </fieldset> 
+        <span class="tc">By clicking the button, you are agreeing to our<a href="/" target="_blank">Terms and Services</a></span>
+      </form>
+    </div>
+ </div>
+ <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
