--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="normalize.css" type="text/css" rel="stylesheet">
   <link href="style.css" type="text/css" rel="stylesheet">
   <title>Intro component with sign up form</title>
@@ -18,7 +20,7 @@
   but understanding how developers think is invaluable.</p>
     </div>
     <div class="form-container">
-      <button type="submit" class="btn-bg-purp btn">Try it free 7 days then $20/mo. thereafter</button>
+      <button type="submit" class="btn-bg-purp btn"> <strong>Try it free 7 days </strong>then <br> $20/mo. thereafter</button>
       <form action="results.html" method="get" class="form">
         <fieldset class="fieldset">
           <input type="text" name="first-name" class="input" placeholder="First Name" minlength="1" maxlength="20" required>
@@ -30,8 +32,8 @@
           <input type="password" name="password" class="input" placeholder="Password" minlength="6" required>
           <div class="error hidden">Password error mssg</div>
           <button type="submit" name="btn-submit" class="btn-bg-green btn">Claim your free trial</button>
+          <span class="tc">By clicking the button, you are agreeing to our<a href="/" target="_blank">Terms and Services</a></span>
         </fieldset> 
-        <span class="tc">By clicking the button, you are agreeing to our<a href="/" target="_blank">Terms and Services</a></span>
       </form>
     </div>
  </div>
