--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   but understanding how developers think is invaluable.</p>
     </div>
     <div class="form-container">
-      <button type="submit" class="btn-bg-purp btn"> <strong>Try it free 7 days </strong>then <br> $20/mo. thereafter</button>
+      <button type="submit" class="btn-bg-purp btn"> <strong>Try it free 7 days </strong>then $20/mo. thereafter</button>
       <form action="results.html" method="get" class="form">
         <fieldset class="fieldset">
           <input type="text" name="first-name" class="input" placeholder="First Name" minlength="1" maxlength="20" required>
