--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </div>
     <div class="form-container">
       <button type="submit" class="btn-bg-purp btn"> <strong>Try it free 7 days </strong>then $20/mo. thereafter</button>
-      <form action="results.html" method="get" class="form">
+      <form action="/" method="get" class="form">
         <fieldset class="fieldset">
-          <input type="text" name="first-name" class="input" placeholder="First Name" minlength="1" maxlength="20" required>
-          <div class="error hidden">First name error mssg</div>
-          <input type="text" name="last-name" class="input" placeholder="Last Name" minlength="1" maxlength="20" required>
-          <div class="error hidden">Last name error mssg</div>
-          <input type="email" name="email" class="input" placeholder="Email Address" required>
-          <div class="error hidden">Email error mssg</div>
-          <input type="password" name="password" class="input" placeholder="Password" minlength="6" required>
-          <div class="error hidden">Password error mssg</div>
+          <input type="text" id="first-name" name="first-name" class="input" placeholder="First Name" minlength="2" maxlength="30">
+          <div class="error hidden">First name cannot be empty</div>
+          <input type="text" id="last-name" name="last-name" class="input" placeholder="Last Name" minlength="2" maxlength="30">
+          <div class="error hidden">Last name cannot be empty</div>
+          <input type="email" id="email" name="email" class="input" placeholder="Email Address">
+          <div class="error hidden">Looks like this is not an email</div>
+          <input type="password" id="password" name="password" class="input" placeholder="Password" minlength="6">
+          <div class="error hidden">Password cannot be empty</div>
           <button type="submit" name="btn-submit" class="btn-bg-green btn">Claim your free trial</button>
           <span class="tc">By clicking the button, you are agreeing to our <a href="/" target="_blank">Terms and Services</a></span>
         </fieldset> 
