JS V.01 - Working | SIP - Extended Validation + Icon

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <form action="/" method="get" class="form">
         <fieldset class="fieldset">
           <input type="text" id="first-name" name="first-name" class="input" placeholder="First Name" minlength="2" maxlength="30">
-          <div class="error hidden">First name cannot be empty</div>
+          <div class="errorMsg hidden">First name cannot be empty</div>
           <input type="text" id="last-name" name="last-name" class="input" placeholder="Last Name" minlength="2" maxlength="30">
-          <div class="error hidden">Last name cannot be empty</div>
+          <div class="errorMsg hidden">Last name cannot be empty</div>
           <input type="email" id="email" name="email" class="input" placeholder="Email Address">
-          <div class="error hidden">Looks like this is not an email</div>
+          <div class="errorMsg hidden">Looks like this is not an email</div>
           <input type="password" id="password" name="password" class="input" placeholder="Password" minlength="6">
-          <div class="error hidden">Password cannot be empty</div>
+          <div class="errorMsg hidden">Password cannot be empty</div>
           <button type="submit" name="btn-submit" class="btn-bg-green btn">Claim your free trial</button>
           <span class="tc">By clicking the button, you are agreeing to our <a href="/" target="_blank">Terms and Services</a></span>
         </fieldset> 
