Refactored + New Comments

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="form-container">
       <button type="submit" class="btn-bg-purp btn"> <strong>Try it free 7 days </strong>then $20/mo. thereafter</button>
-      <form action="/" method="get" class="form">
+      <form action="results.html" method="get" class="form">
         <fieldset class="fieldset">
           <input type="text" id="first-name" name="first-name" class="input" placeholder="First Name" minlength="2" maxlength="30">
             <div class="errorMsg hidden">First Name cannot be empty</div>
