Phone number added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <div class="errorMsg hidden">Looks like this is not an email</div>
           <input type="password" id="password" name="password" class="input" placeholder="Password" minlength="6">
             <div class="errorMsg hidden">Password cannot be empty</div>
+          <input type="tel" id="phone-number" name="phone-number" class="input" placeholder="Phone Number" min="10" max="20" value="078844cskmskws">
+            <div class="errorMsg hidden">Phone number must be in a valid format</div>
           <button type="submit" name="btn-submit" class="btn-bg-green btn">Claim your free trial</button>
           <span class="tc">By clicking the button, you are agreeing to our <a href="/" target="_blank">Terms and Services</a></span>
         </fieldset> 
