--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <form action="results.html" method="get" class="form">
         <fieldset class="fieldset">
           <input type="text" id="first-name" name="first-name" class="input" placeholder="First Name" minlength="2" maxlength="30">
-            <div class="errorMsg hidden">First Name cannot be empty</div>
+            <div class="errorMsg hidden"></div>
           <input type="text" id="last-name" name="last-name" class="input" placeholder="Last Name" minlength="2" maxlength="30">
-            <div class="errorMsg hidden">Last Name cannot be empty</div>
+            <div class="errorMsg hidden"></div>
           <input type="email" id="email" name="email" class="input" placeholder="Email Address">
-            <div class="errorMsg hidden">Looks like this is not an email</div>
+            <div class="errorMsg hidden"></div>
           <input type="password" id="password" name="password" class="input" placeholder="Password" minlength="6">
-            <div class="errorMsg hidden">Password cannot be empty</div>
+            <div class="errorMsg hidden"></div>
           <input type="tel" id="phone-number" name="phone-number" class="input" placeholder="Phone Number" min="10" max="20">
-            <div class="errorMsg hidden">Phone number must be in a valid format</div>
+            <div class="errorMsg hidden"></div>
           <button type="submit" name="btn-submit" class="btn-bg-green btn">Claim your free trial</button>
           <span class="tc">By clicking the button, you are agreeing to our <a href="/" target="_blank">Terms and Services</a></span>
         </fieldset> 
