--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="errorMsg hidden"></div>
           <input type="password" id="password" name="password" class="input" placeholder="Password" minlength="6">
             <div class="errorMsg hidden"></div>
-          <input type="tel" id="phone-number" name="phone-number" class="input" placeholder="Phone Number" min="10" max="20">
+          <input type="number" id="phone-number" name="phone-number" class="input" placeholder="Phone Number" min="10" max="20">
             <div class="errorMsg hidden"></div>
           <button type="submit" name="btn-submit" class="btn-bg-green btn">Claim your free trial</button>
           <span class="tc">By clicking the button, you are agreeing to our <a href="/" target="_blank">Terms and Services</a></span>
