--- a/results.html
+++ b/results.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Results</title>
-</head>
-<body>
-    <div class="results"></div>
-    <script>
-        const results = document.querySelector('.results')
-        new URLSearchParams(window.location.search).forEach((n, v) => {
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Results</title>
+   </head>
+   <body>
+      <div class="results"></div>
+      <script>
+         const results = document.querySelector('.results')
+         new URLSearchParams(window.location.search).forEach((n, v) => {
             results.append(`${v}: ${n}`)
             results.append(document.createElement('br'))
-        })
-    </script>
-</body>
+         })
+      </script>
+   </body>
 </html>
